@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                                search.h                                 */
-/* Original code written by Daniel Hawkins. Last modified on 2015-05-30.   */
+/* Original code written by Daniel Hawkins. Last modified on 2015-06-01.   */
 /*                                                                         */
 /* The file defines several searching functions' prototypes.               */
 /*                                                                         */
@@ -12,7 +12,6 @@
 
 #include <ftw.h>
 
-int findIn(const char *);
 int onWalk(const char *fpath, const struct stat *sb, int typeflag, struct FTW *ftwbuf);
 
 #endif
