@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                               settings.h                                */
-/* Original code written by Daniel Hawkins. Last modified on 2015-03-10.   */
+/* Original code written by Daniel Hawkins. Last modified on 2015-06-01.   */
 /*                                                                         */
 /* The file defines the structures for handling important variables.       */
 /*                                                                         */
@@ -18,17 +18,12 @@ struct {
     DIR_LIST *excluded_directories;
     DIR_LIST *root_dirs;
     char *search_string;
-    /*
-     * Declare the length out here to reduce calls to strlen
-     * in the search. Before it recalculated with every line
-     */
-    int search_string_len;
 
     /*
-     * Declare the pointer to strncmp or strncasecmp out here,
-      *so I can easily do case sensitive or case-insensitive searches
+     * Declare the pointer to strstr or strcasestr out here,
+     * so I can easily do case sensitive or case-insensitive searches
      */
-    int (*comp_func)(const char *, const char *, size_t);
+    char *(*comp_func)(const char *, const char *);
 
     char *output_file;
     char *log_file;
